--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 
 <html>
     <body>
-        <heading 1> 
-            Cait Heiderman
-        </heading>
+        <h1> Cait Heiderman </h1>
+
+       
+<li>cheiderm@terpmail.umd.edu</li>
+<li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
+<li>GitHub: https://github.com/VogueTortellini</li>
+
+<strong> Journalism and Government & Politics Student </strong>
 
 
-
-
-
-        
     </body>
 </html>
