--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <strong> Journalism and Government & Politics Student </strong>
 
-
+<h2>Experience</h2>
+<h3>PRN Front Desk Support</h3>
+<h4>SARC Harford County</h4>
+<h5>Nov 2023 to Present</h5>
+<p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
+nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
+process donations and write tax return thank you letters to maintain SARC’s 501(c)(3)
+status. I use skills in graphic design to create various flyers for the safehouse and
+administrative buildings, as well as nonprofit resource brochures and fundraising event
+materials. I am proficient in Loomly Social Media Management Platform, where I create
+posts for the nonprofit's various social media sites.</p>
     </body>
 </html>
