--- a/index.html
+++ b/index.html
@@ -33,5 +33,13 @@ status. I use skills in graphic design to create various flyers for the safehous
 administrative buildings, as well as nonprofit resource brochures and fundraising event
 materials. I am proficient in Loomly Social Media Management Platform, where I create
 posts for the nonprofit's various social media sites.</p>
-    </body>
+   
+<h6>Summer Research Fellow</h6>
+<h7>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h7>
+<h8> June 2025 toJuly 2025</h8>
+<p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
+begin the stages of writing a book. I gathered and reviewed materials on a 1970s
+feminist news journal, Off Our Backs.</p>
+
+</body>
 </html>
