--- a/resume.html
+++ b/resume.html
@@ -21,9 +21,9 @@ administrative buildings, as well as nonprofit resource brochures and fundraisin
 materials. I am proficient in Loomly Social Media Management Platform, where I create
 posts for the nonprofit's various social media sites.</p>
    
-<h6>Summer Research Fellow</h6>
+<h3>Summer Research Fellow</h3>
 <h7>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h7>
-<h8> June 2025 toJuly 2025</h8>
+<h8> June 2025 to July 2025</h8>
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
