--- a/resume.html
+++ b/resume.html
@@ -23,10 +23,17 @@ posts for the nonprofit's various social media sites.</p>
    
 <h3>Summer Research Fellow</h3>
 <h4>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h4>
-<h4> June 2025 to July 2025</h4>
+<h5> June 2025 to July 2025</h5>
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
 
+<h3>Peer Research Mentor</h3>
+<h4>UMD FIRE: Visualizing Social Justice Stream</h4>
+<h5>Jan 2025 to Present</h5>
+<p>I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
+stream in completing independent research projects on topics such as the intersection
+of the feminist movement and mental health, the intersection of politics and musical
+theater and the stories of South Asian women who have experienced sexual abuse.</p>
 </body>
 </html>
