--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
 <li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
 <li>GitHub: https://github.com/VogueTortellini</li>
 
+
 <strong> Journalism and Government & Politics Student </strong>
 
 <h2>Experience</h2>
@@ -35,5 +36,14 @@ feminist news journal, Off Our Backs.</p>
 stream in completing independent research projects on topics such as the intersection
 of the feminist movement and mental health, the intersection of politics and musical
 theater and the stories of South Asian women who have experienced sexual abuse.</p>
+
+<h3>Campus Connector</h3>
+<h4>Maryland Promise Program</h4>
+<h5>August 2024 to Present</h5>
+<p>I am a peer mentor for incoming freshman and transfer students joining the UMD
+Maryland Promise Program. I plan workshop events and build one-on-one relationships
+with students to foster community in the program. I also am a Campus Connector
+Squad Leader, where I mentor other Campus Connectors.</p>
+
 </body>
 </html>
