--- a/resume.html
+++ b/resume.html
@@ -45,5 +45,11 @@ Maryland Promise Program. I plan workshop events and build one-on-one relationsh
 with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors.</p>
 
+<h2>Education:</h2>
+<ul>
+    <li>Bachelor of Arts, Journalism and Government & Politics, University of Maryland,
+Expected May 2027</li>
+</ul>
+
 </body>
 </html>
