--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </html>
 
+
 <html>
     <body>
         <h1> Cait Heiderman </h1>
@@ -19,6 +20,7 @@
 <li>cheiderm@terpmail.umd.edu</li>
 <li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
 <li>GitHub: https://github.com/VogueTortellini</li>
+
 
 <strong> Journalism and Government & Politics Student </strong>
 
@@ -34,12 +36,34 @@ administrative buildings, as well as nonprofit resource brochures and fundraisin
 materials. I am proficient in Loomly Social Media Management Platform, where I create
 posts for the nonprofit's various social media sites.</p>
    
-<h6>Summer Research Fellow</h6>
-<h7>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h7>
-<h8> June 2025 toJuly 2025</h8>
+<h3>Summer Research Fellow</h3>
+<h4>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h4>
+<h5> June 2025 to July 2025</h5>
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
+
+<h3>Peer Research Mentor</h3>
+<h4>UMD FIRE: Visualizing Social Justice Stream</h4>
+<h5>Jan 2025 to Present</h5>
+<p>I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
+stream in completing independent research projects on topics such as the intersection
+of the feminist movement and mental health, the intersection of politics and musical
+theater and the stories of South Asian women who have experienced sexual abuse.</p>
+
+<h3>Campus Connector</h3>
+<h4>Maryland Promise Program</h4>
+<h5>August 2024 to Present</h5>
+<p>I am a peer mentor for incoming freshman and transfer students joining the UMD
+Maryland Promise Program. I plan workshop events and build one-on-one relationships
+with students to foster community in the program. I also am a Campus Connector
+Squad Leader, where I mentor other Campus Connectors.</p>
+
+<h2>Education:</h2>
+<ul>
+    <li>Bachelor of Arts, Journalism and Government & Politics, University of Maryland,
+Expected May 2027</li>
+</ul>
 
 </body>
 </html>
