--- a/Resume/index.html
+++ b/Resume/index.html
@@ -65,5 +65,17 @@ Squad Leader, where I mentor other Campus Connectors.</p>
 Expected May 2027</li>
 </ul>
 
+<h2>Skills:</h2>
+<ul>
+  <li>Photography. I completed two courses at UMD’s Philip Merrill College of
+Journalism which trained me in photojournalism. I learned to use a DSLR
+camera, Adobe Lightroom, Adobe Photoshop and to write AP style
+photocaptions</li>
+<li>Canva. I am proficient in Canva. I use the platform to create nonprofit brochures
+in English and Spanish, presentations and create promotional materials</li>
+<li>Journalism. I have experience with AP style, photojournalism, and college news
+reporting.</li>
+</ul>
+
 </body>
 </html>
