--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,9 +1,11 @@
 
-<html>
-
+<html lang="en">
+<head>
     <body>
-        <h1> Cait Heiderman </h1>
-
+        <title> Cait Heiderman's Resume</title>
+    </head>
+</body>
+<h1> Cait Heiderman </h1>
        
 <li>cheiderm@terpmail.umd.edu</li>
 <li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
@@ -11,6 +13,9 @@
 
 
 <strong> Journalism and Government & Politics Student </strong>
+<p> I am a junior at pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
+  I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields. 
+</p>
 
 <h2>Experience</h2>
 <h3>PRN Front Desk Support</h3>
