--- a/Resume/index.html
+++ b/Resume/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <body>
+      <!--I did this myself!-->
         <title> Cait Heiderman's Resume</title>
     </head>
 </body>
