--- a/Resume/index.html
+++ b/Resume/index.html
@@ -61,7 +61,7 @@ Expected May 2027</li>
 
 <h2>Skills:</h2>
 <ul>
-  <li>Photography. I completed two courses at UMD’s Philip Merrill College of
+  <li>Photography. I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
 camera, Adobe Lightroom, Adobe Photoshop and to write AP style
 photocaptions</li>
