--- a/Resume/index.html
+++ b/Resume/index.html
@@ -7,6 +7,7 @@
     </head>
 </body>
 <h1> Cait Heiderman </h1>
+<img src= "caitheiderman.jpg.HEIC" width="300 px">
        
 <li>cheiderm@terpmail.umd.edu</li>
 <li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
