--- a/Resume/index.html
+++ b/Resume/index.html
@@ -4,8 +4,17 @@
     <body>
       <!--I did this myself!-->
         <title> Cait Heiderman's Resume</title>
+
+        <style type= "text/css">
+          h1 {
+            font-size: 36px;
+            color: #33485e;
+          }
+        </style>
     </head>
 </body>
+
+
 <h1> Cait Heiderman </h1>
 <img src= "caitheiderman.jpg.HEIC" width="300 px">
        
