--- a/Resume/index.html
+++ b/Resume/index.html
@@ -19,8 +19,8 @@
 <img src= "caitheiderman.jpg.HEIC" width="300 px">
        
 <li>cheiderm@terpmail.umd.edu</li>
-<li> LinkedIn: https://www.linkedin.com/in/cait-heiderman-845248261/</li>
-<li>GitHub: https://github.com/VogueTortellini</li>
+<li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
+<li><a href="https://github.com/VogueTortellini">GitHub</a></li>
 
 
 <strong> Journalism and Government & Politics Student </strong>
