--- a/Resume/index.html
+++ b/Resume/index.html
@@ -16,7 +16,7 @@
 
 
 <h1> Cait Heiderman </h1>
-<img src= "caitheiderman.jpg.HEIC" width="300 px">
+<img src= "caitheiderman.jpg" width="300 px">
        
 <li>cheiderm@terpmail.umd.edu</li>
 <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
