--- a/Resume/index.html
+++ b/Resume/index.html
@@ -24,7 +24,7 @@
 
 
 <strong> Journalism and Government & Politics Student </strong>
-<p> I am a junior at pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
+<p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields. 
 </p>
 
