--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,6 +1,7 @@
 
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="styles.css">
     <body>
       <!--I did this myself!-->
         <title> Cait Heiderman's Resume </title>
