--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
     <body>
       <!--I did this myself!-->
         <title> Cait Heiderman's Resume </title>
