--- a/Resume/index.html
+++ b/Resume/index.html
@@ -22,8 +22,7 @@
        
 <li>cheiderm@terpmail.umd.edu</li>
 <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
-<li><a href="https://github.com/VogueTortellini">GitHub</a></li>
-
+<li><a href="https://github.com/VogueTortellini">GitHub</a></li> <br>
 
 <strong> Journalism and Government & Politics Student </strong>
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
