--- a/Resume/index.html
+++ b/Resume/index.html
@@ -72,13 +72,13 @@ Expected May 2027</li>
 
 <h2>Skills:</h2>
 <ul>
-  <li>Photography. I completed two courses at UMDs Philip Merrill College of
+  <li>Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
 camera, Adobe Lightroom, Adobe Photoshop and to write AP style
 photocaptions</li>
-<li>Canva. I am proficient in Canva. I use the platform to create nonprofit brochures
+<li>Canva: I am proficient in Canva. I use the platform to create nonprofit brochures
 in English and Spanish, presentations and create promotional materials</li>
-<li>Journalism. I have experience with AP style, photojournalism, and college news
+<li>Journalism: I have experience with AP style, photojournalism and college news
 reporting.</li>
 </ul>
 
