--- a/Resume/index.html
+++ b/Resume/index.html
@@ -16,10 +16,13 @@
     </head>
 </body>
 
-
+<div id= "name">
 <h1> Cait Heiderman </h1>
+</div>
+
 <img src= "caitheiderman.jpg" alt="Profile image of Cait Heiderman" width="300 px">
-       
+
+
 <li>cheiderm@terpmail.umd.edu</li>
 <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
 <li><a href="https://github.com/VogueTortellini">GitHub</a></li> <br>
