--- a/Resume/index.html
+++ b/Resume/index.html
@@ -32,7 +32,10 @@
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields. 
 </p>
 
+<div id="sectionheader">
 <h2>Experience</h2>
+</div>
+
 <h3>PRN Front Desk Support</h3>
 <h4>SARC Harford County</h4>
 <h5>Nov 2023 to Present</h5>
@@ -67,13 +70,19 @@ Maryland Promise Program. I plan workshop events and build one-on-one relationsh
 with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors.</p>
 
+<div id="sectionheader">
 <h2>Education:</h2>
+</div>
+
 <ul>
     <li>Bachelor of Arts, Journalism and Government & Politics, University of Maryland,
 Expected May 2027</li>
 </ul>
 
+<div id="sectionheader">
 <h2>Skills:</h2>
+</div>
+
 <ul>
   <li>Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
