--- a/Resume/index.html
+++ b/Resume/index.html
@@ -36,8 +36,14 @@
 <h2>Experience</h2>
 </div>
 
+<div id="jobtitle">
 <h3>PRN Front Desk Support</h3>
+</div>
+
+<div id="organization">
 <h4>SARC Harford County</h4>
+</div>
+
 <h5>Nov 2023 to Present</h5>
 <p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
 nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
@@ -47,23 +53,41 @@ administrative buildings, as well as nonprofit resource brochures and fundraisin
 materials. I am proficient in Loomly Social Media Management Platform, where I create
 posts for the nonprofit's various social media sites.</p>
    
+<div id="jobtitle">
 <h3>Summer Research Fellow</h3>
+</div>
+
+<div id="organization">
 <h4>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h4>
+</div>
+
 <h5> June 2025 to July 2025</h5>
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
 
+<div id="jobtitle">
 <h3>Peer Research Mentor</h3>
+</div>
+
+<div id="organization">
 <h4>UMD FIRE: Visualizing Social Justice Stream</h4>
+</div>
+
 <h5>Jan 2025 to Present</h5>
 <p>I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
 stream in completing independent research projects on topics such as the intersection
 of the feminist movement and mental health, the intersection of politics and musical
 theater and the stories of South Asian women who have experienced sexual abuse.</p>
 
+<div id="jobtitle">
 <h3>Campus Connector</h3>
+</div>
+
+<div id="organization">
 <h4>Maryland Promise Program</h4>
+</div>
+
 <h5>August 2024 to Present</h5>
 <p>I am a peer mentor for incoming freshman and transfer students joining the UMD
 Maryland Promise Program. I plan workshop events and build one-on-one relationships
