--- a/Resume/index.html
+++ b/Resume/index.html
@@ -44,7 +44,10 @@
 <h4>SARC Harford County</h4>
 </div>
 
+<div id="date">
 <h5>Nov 2023 to Present</h5>
+</div>
+
 <p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
 nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
 process donations and write tax return thank you letters to maintain SARC’s 501(c)(3)
@@ -61,7 +64,10 @@ posts for the nonprofit's various social media sites.</p>
 <h4>UMD Office of Undergraduate Research Immersive Research & Innovation Experience</h4>
 </div>
 
+<div id="date">
 <h5> June 2025 to July 2025</h5>
+</div>
+
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
@@ -74,7 +80,10 @@ feminist news journal, Off Our Backs.</p>
 <h4>UMD FIRE: Visualizing Social Justice Stream</h4>
 </div>
 
+<div id="date">
 <h5>Jan 2025 to Present</h5>
+</div>
+
 <p>I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
 stream in completing independent research projects on topics such as the intersection
 of the feminist movement and mental health, the intersection of politics and musical
@@ -88,7 +97,10 @@ theater and the stories of South Asian women who have experienced sexual abuse.<
 <h4>Maryland Promise Program</h4>
 </div>
 
+<div id="date">
 <h5>August 2024 to Present</h5>
+</div>
+
 <p>I am a peer mentor for incoming freshman and transfer students joining the UMD
 Maryland Promise Program. I plan workshop events and build one-on-one relationships
 with students to foster community in the program. I also am a Campus Connector
