--- a/Resume/index.html
+++ b/Resume/index.html
@@ -28,9 +28,12 @@
 <li><a href="https://github.com/VogueTortellini">GitHub</a></li> <br>
 
 <strong> Journalism and Government & Politics Student </strong>
+
+<div id="description">
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields. 
 </p>
+</div>
 
 <div id="sectionheader">
 <h2> Experience </h2>
@@ -48,6 +51,7 @@
 <h5> Nov 2023 to Present </h5>
 </div>
 
+<div id="description">
 <p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
 nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
 process donations and write tax return thank you letters to maintain SARC’s 501(c)(3)
@@ -55,7 +59,8 @@ status. I use skills in graphic design to create various flyers for the safehous
 administrative buildings, as well as nonprofit resource brochures and fundraising event
 materials. I am proficient in Loomly Social Media Management Platform, where I create
 posts for the nonprofit's various social media sites.</p>
-   
+</div>
+
 <div id="jobtitle">
 <h3> Summer Research Fellow </h3>
 </div>
@@ -68,9 +73,11 @@ posts for the nonprofit's various social media sites.</p>
 <h5> June 2025 to July 2025 </h5>
 </div>
 
+<div id="description">
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
+</div>
 
 <div id="jobtitle">
 <h3> Peer Research Mentor </h3>
@@ -84,10 +91,12 @@ feminist news journal, Off Our Backs.</p>
 <h5> Jan 2025 to Present </h5>
 </div>
 
+<div id="description">
 <p> I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
 stream in completing independent research projects on topics such as the intersection
 of the feminist movement and mental health, the intersection of politics and musical
 theater and the stories of South Asian women who have experienced sexual abuse. </p>
+</div>
 
 <div id="jobtitle">
 <h3> Campus Connector </h3>
@@ -101,10 +110,12 @@ theater and the stories of South Asian women who have experienced sexual abuse. 
 <h5> August 2024 to Present </h5>
 </div>
 
+<div id="description">
 <p> I am a peer mentor for incoming freshman and transfer students joining the UMD
 Maryland Promise Program. I plan workshop events and build one-on-one relationships
 with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
+</div>
 
 <div id="sectionheader">
 <h2> Education: </h2>
