--- a/Resume/index.html
+++ b/Resume/index.html
@@ -21,11 +21,14 @@
 </div>
 <!--
 <img src= "caitheiderman.jpg" alt="Profile image of Cait Heiderman" width="300 px">
-!-->
-
-<li>cheiderm@terpmail.umd.edu</li>
-<li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
-<li><a href="https://github.com/VogueTortellini">GitHub</a></li> <br>
+-->
+<div id="menu">
+  <ul>
+    <li>cheiderm@terpmail.umd.edu</li>
+    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
+    <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
+  </ul>
+</div>
 
 <strong> Journalism and Government & Politics Student </strong>
 
