--- a/Resume/index.html
+++ b/Resume/index.html
@@ -30,9 +30,11 @@
   </ul>
 </div>
 
+<div id="title">
 <strong> Journalism and Government & Politics Student </strong>
+</div>
 
-<div id="description">
+<div id="top">
 <p> I am a junior pursuing a Bachelor of Arts in Journalism and Government & Politics at the University of Maryland, College Park. 
   I am passionate about using my skills in writing, research, photography and social media to pursue a career in the media, legal and human rights advocacy fields. 
 </p>
@@ -124,15 +126,18 @@ Squad Leader, where I mentor other Campus Connectors. </p>
 <h2> Education: </h2>
 </div>
 
+<div id="degrees">
 <ul>
     <li> Bachelor of Arts, Journalism and Government & Politics, University of Maryland,
 Expected May 2027 </li>
 </ul>
+</div>
 
 <div id="sectionheader">
 <h2>Skills:</h2>
 </div>
 
+<div id="do">
 <ul>
   <li> Photography: I completed two courses at UMDs Philip Merrill College of
 Journalism which trained me in photojournalism. I learned to use a DSLR
@@ -143,6 +148,7 @@ in English and Spanish, presentations and create promotional materials </li>
 <li> Journalism: I have experience with AP style, photojournalism and college news
 reporting. </li>
 </ul>
+</div>
 
 </body>
 </html>
