--- a/Resume/index.html
+++ b/Resume/index.html
@@ -28,7 +28,7 @@
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
-</div>
+</div> <br>
 
 <div id="title">
 <strong> Journalism and Government & Politics Student </strong>
