--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,5 +1,6 @@
-
+ <div id= "container">
 <html lang="en">
+
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -152,3 +153,5 @@ reporting. </li>
 
 </body>
 </html>
+
+</div>
