--- a/Resume/index.html
+++ b/Resume/index.html
@@ -27,9 +27,7 @@
 -->
 <div id= "menu">
   <ul>
-    <li>cheiderm@terpmail.umd.edu</li>
-    <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li>
-    <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
+    <li>cheiderm@terpmail.umd.edu</li> <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
   </ul>
 </div> 
 
