--- a/Resume/index.html
+++ b/Resume/index.html
@@ -41,9 +41,10 @@
 </p>
 </div>
 
-<div id= "sectionheader">
-<h2> Experience </h2>
-</div>
+
+<h2> <p class="sectionheader"> Experience </p>
+</h2>
+
 
 <div id= "jobtitle">
 <h3> PRN Front Desk Support </h3>
