--- a/Resume/index.html
+++ b/Resume/index.html
@@ -19,9 +19,9 @@
     </head>
 </body>
 
-<div id= "name">
-<h1> Cait Heiderman </h1>
-</div>
+
+<h1> <p id= "name"> Cait Heiderman </p> </h1>
+
 <!--
 <img src= "caitheiderman.jpg" alt="Profile image of Cait Heiderman" width="300 px">
 -->
