fixed section header

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -41,14 +41,9 @@
 </p>
 </div>
 
+<h2> <p class= "sectionheader"> Experience </p></h2>
 
-<h2> <p class= "sectionheader"> Experience </p>
-</h2>
-
-
-<div id= "jobtitle">
-<h3> PRN Front Desk Support </h3>
-</div>
+<h3> <p id= "jobtitle"> PRN Front Desk Support </p> </h3>
 
 <div id= "organization">
 <h4> SARC Harford County </h4>
@@ -68,9 +63,7 @@ materials. I am proficient in Loomly Social Media Management Platform, where I c
 posts for the nonprofit's various social media sites.</p>
 </div>
 
-<div id= "jobtitle">
-<h3> Summer Research Fellow </h3>
-</div>
+<h3> <p id= "jobtitle"> Summer Research Fellow </p> </h3>
 
 <div id= "organization">
 <h4> UMD Office of Undergraduate Research Immersive Research & Innovation Experience </h4>
@@ -86,9 +79,7 @@ begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
 </div>
 
-<div id= "jobtitle">
-<h3> Peer Research Mentor </h3>
-</div>
+<h3> <p id= "jobtitle"> Peer Research Mentor </p> </h3>
 
 <div id="organization">
 <h4> UMD FIRE: Visualizing Social Justice Stream </h4>
@@ -105,9 +96,7 @@ of the feminist movement and mental health, the intersection of politics and mus
 theater and the stories of South Asian women who have experienced sexual abuse. </p>
 </div>
 
-<div id= "jobtitle">
-<h3> Campus Connector </h3>
-</div>
+<h3> <p id= "jobtitle"> Campus Connector </p> </h3>
 
 <div id= "organization">
 <h4> Maryland Promise Program </h4>
@@ -124,9 +113,7 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
-<div id= "sectionheader">
-<h2> Education: </h2>
-</div>
+<h2> <p class= "sectionheader"> Education </p> </h2>
 
 <div id= "degrees">
 <ul>
@@ -135,9 +122,7 @@ Expected May 2027 </li>
 </ul>
 </div>
 
-<div id= "sectionheader">
-<h2>Skills:</h2>
-</div>
+<h2> <p class= "sectionheader"> Skills </p> </h2>
 
 <div id= "do">
 <ul>
