--- a/Resume/index.html
+++ b/Resume/index.html
@@ -43,17 +43,15 @@
 
 <h2> <p class= "sectionheader"> Experience </p></h2>
 
-<h3> <p id= "jobtitle"> PRN Front Desk Support </p> </h3>
+<h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3>
 
-<div id= "organization">
-<h4> SARC Harford County </h4>
-</div>
+<h4> <p class= "organization"> SARC Harford County </p> </h4>
 
-<div id= "date">
+<div class= "date">
 <h5> Nov 2023 to Present </h5>
 </div>
 
-<div id= "description">
+<div class= "description">
 <p> I handle call lines to ensure clients, donors and vendors swiftly get in touch with
 nonprofit staff. I am proficient in Bloomerang Donor Management Software, where I
 process donations and write tax return thank you letters to maintain SARC’s 501(c)(3)
@@ -65,48 +63,47 @@ posts for the nonprofit's various social media sites.</p>
 
 <h3> <p id= "jobtitle"> Summer Research Fellow </p> </h3>
 
-<div id= "organization">
+<div class= "organization">
 <h4> UMD Office of Undergraduate Research Immersive Research & Innovation Experience </h4>
 </div>
-
-<div id= "date">
+<div class= "date">
 <h5> June 2025 to July 2025 </h5>
 </div>
 
-<div id= "description">
+<div class= "description">
 <p> I used my skills in archival research and feminist research to help Dr. Jaclyn Bruner to
 begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
 </div>
 
-<h3> <p id= "jobtitle"> Peer Research Mentor </p> </h3>
+<h3> <p class= "jobtitle"> Peer Research Mentor </p> </h3>
 
-<div id="organization">
+<div class= "organization">
 <h4> UMD FIRE: Visualizing Social Justice Stream </h4>
 </div>
 
-<div id= "date">
+<div class= "date">
 <h5> Jan 2025 to Present </h5>
 </div>
 
-<div id= "description">
+<div class= "description">
 <p> I mentor a group of undergraduate students in the FIRE Visualizing Social Justice
 stream in completing independent research projects on topics such as the intersection
 of the feminist movement and mental health, the intersection of politics and musical
 theater and the stories of South Asian women who have experienced sexual abuse. </p>
 </div>
 
-<h3> <p id= "jobtitle"> Campus Connector </p> </h3>
+<h3> <p class= "jobtitle"> Campus Connector </p> </h3>
 
-<div id= "organization">
+<div class= "organization">
 <h4> Maryland Promise Program </h4>
 </div>
 
-<div id= "date">
+<div class= "date">
 <h5> August 2024 to Present </h5>
 </div>
 
-<div id= "description">
+<div class= "description">
 <p> I am a peer mentor for incoming freshman and transfer students joining the UMD
 Maryland Promise Program. I plan workshop events and build one-on-one relationships
 with students to foster community in the program. I also am a Campus Connector
