--- a/Resume/index.html
+++ b/Resume/index.html
@@ -41,11 +41,17 @@
 </p>
 </div>
 
+<div>
 <h2> <p class= "sectionheader"> Experience </p></h2>
+</div>
 
+<div>
 <h3> <p class= "jobtitle"> PRN Front Desk Support </p> </h3>
+</div>
 
+<div>
 <h4> <p class= "organization"> SARC Harford County </p> </h4>
+</div>
 
 <div class= "date">
 <h5> Nov 2023 to Present </h5>
@@ -61,7 +67,9 @@ materials. I am proficient in Loomly Social Media Management Platform, where I c
 posts for the nonprofit's various social media sites.</p>
 </div>
 
-<h3> <p id= "jobtitle"> Summer Research Fellow </p> </h3>
+<div>
+<h3> <p class= "jobtitle"> Summer Research Fellow </p> </h3>
+</div>
 
 <div class= "organization">
 <h4> UMD Office of Undergraduate Research Immersive Research & Innovation Experience </h4>
@@ -76,7 +84,9 @@ begin the stages of writing a book. I gathered and reviewed materials on a 1970s
 feminist news journal, Off Our Backs.</p>
 </div>
 
+<div>
 <h3> <p class= "jobtitle"> Peer Research Mentor </p> </h3>
+</div>
 
 <div class= "organization">
 <h4> UMD FIRE: Visualizing Social Justice Stream </h4>
@@ -93,7 +103,9 @@ of the feminist movement and mental health, the intersection of politics and mus
 theater and the stories of South Asian women who have experienced sexual abuse. </p>
 </div>
 
+<div>
 <h3> <p class= "jobtitle"> Campus Connector </p> </h3>
+</div>
 
 <div class= "organization">
 <h4> Maryland Promise Program </h4>
@@ -110,7 +122,9 @@ with students to foster community in the program. I also am a Campus Connector
 Squad Leader, where I mentor other Campus Connectors. </p>
 </div>
 
+<div>
 <h2> <p class= "sectionheader"> Education </p> </h2>
+</div>
 
 <div id= "degrees">
 <ul>
