--- a/Resume/index.html
+++ b/Resume/index.html
@@ -27,6 +27,8 @@
 -->
 <div id= "menu">
   <ul>
+    <display: inline;> 
+    <list-style-type: none;>
     <li>cheiderm@terpmail.umd.edu</li> 
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
