--- a/Resume/index.html
+++ b/Resume/index.html
@@ -27,8 +27,7 @@
 -->
 <div id= "menu">
   <ul>
-    <display: inline;> 
-    <list-style-type: none;>
+    <p style="display: inline; list-style-type: none;"> </p>
     <li>cheiderm@terpmail.umd.edu</li> 
     <li><a href="https://www.linkedin.com/in/cait-heiderman-845248261/">LinkedIn</a></li> 
     <li><a href="https://github.com/VogueTortellini">GitHub</a></li>
