--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -35,15 +35,15 @@
        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Current Issue</a>
+           <a class="nav-link active" aria-current="page" href="#">Current issue</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Past Issues</a>
+           <a class="nav-link active" aria-current="page" href="#">Past issues</a>
          </li>
 
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="#">Follow Us</a>
+           <a class="nav-link active" aria-current="page" href="#">Follow us</a>
          </li>
     
          </li>
