--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -45,6 +45,7 @@
           <li class="nav-item">
            <a class="nav-link active" aria-current="page" href="#">Follow us</a>
          </li>
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" ></nav>
     
          </li>
        </ul>
