--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -54,6 +54,7 @@
  </nav>
  <!-- Navbar end-->
 
+ <!-- Hero image start-->
 <div class="container col-xxl-8 px-4 py-5"> 
 <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
 <div class="col-10 col-sm-8 col-lg-6"> <img src="https://images.unsplash.com/photo-1564982752979-3f7bc974d29a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" 
@@ -66,7 +67,7 @@
   <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button> 
   <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> 
 </div> </div> </div> </div>
-
+<!-- Hero image end-->
 
 </body>
 </html>
