--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -24,7 +24,7 @@
 
 
  <!-- Navbar start-->
- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+ <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
    <div class="container-fluid">
      <a class="navbar-brand" href="#">Skate! Newsletter</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,12 +45,10 @@
           <li class="nav-item">
            <a class="nav-link active" aria-current="page" href="#">Follow us</a>
           </li>
-         </li>
        </ul>
        
      </div>
    </div>
-   <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" ></nav>
  </nav>
  <!-- Navbar end-->
 
