--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -82,6 +82,7 @@
         <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" 
     class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" max-width="500px">
 
+ <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
     </div>
 </div>
 
