--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -83,7 +83,7 @@
     class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="100%" max-width="500px">
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
-  <button type="button" class="btn btn-dark btn-lg px-4 me-md-2 translate-middle">Read now</button> 
+  <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
 </div>
 
     </div>
