--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -66,6 +66,7 @@
 </div> </div> </div> </div>
 <!-- Hero image end-->
 
+<!-- Container start-->
 <div class="container">
   <div class="row">
     <div class="col-md-6 text-center">
@@ -85,6 +86,24 @@
 <br>
   <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
  </div>
+</div>
+<!-- Container end-->
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 text-center"> 
+      <i class="bi bi-book"></i>
+      </div>
+
+      <div class="row">
+    <div class="col-md-4 text-center"> 
+      <i class="bi bi-chat-square-dots"></i>
+      </div>
+
+      <div class="row">
+    <div class="col-md-4 text-center"> 
+      <i class="bi bi-heart"></i>
+      </div>
 </div>
 
 </body>
