--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -104,7 +104,7 @@
     <div class="col-md-4 text-center"> 
       <i class="bi bi-heart"></i>
       </div>
-</div>
+</div> </div>
 
 </body>
 </html>
