--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -106,5 +106,11 @@
       </div>
 </div> </div>
 
+<div class="grid text-center">
+  <div class="g-col-4">test</div>
+  <div class="g-col-4">test</div>
+  <div class="g-col-4">test</div>
+</div>
+
 </body>
 </html>
