--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -107,9 +107,9 @@
 </div> </div>
 
 <div class="grid text-center">
-  <div class="g-col-4">test</div>
-  <div class="g-col-4">test</div>
-  <div class="g-col-4">test</div>
+  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
+  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
+  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
 </div>
 
 </body>
