--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -104,13 +104,7 @@
     <div class="col-md-4 text-center"> 
       <i class="bi bi-heart"></i>
       </div>
-</div> </div>
-
-<div class="grid text-center">
-  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
-  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
-  <div class="g-col-6 g-col-md-4">.g-col-6 .g-col-md-4</div>
-</div>
+</div> </div> </div>div>
 
 </body>
 </html>
