--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -1,7 +1,8 @@
 <!doctype html>
-
 <html lang="en">
+
 <head>
+<link rel="stylesheet" type="text/css" href="bootstrap-template1.css">
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -14,15 +15,11 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-
-
 </head>
+
 <body>
-
-
  <!-- Navbar start-->
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    <div class="container-fluid">
@@ -104,7 +101,8 @@
     <div class="col-md-4 text-center"> 
       <i class="bi bi-heart"></i>
       </div>
-</div> </div> </div>div>
+</div> </div> </div>
+
 
 </body>
 </html>
