--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -89,17 +89,17 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-book"></i>
+      <i class="bi bi-book book-icon"></i>
       </div>
 
       <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-chat-square-dots"></i>
+      <i class="bi bi-chat-square-dots chat-icon"></i>
       </div>
 
       <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-heart"></i>
+      <i class="bi bi-heart heart-icon"></i>
       </div>
 </div> </div> </div>
 
