trying to do css

--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -89,17 +89,17 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-book book-icon"></i>
+      <i class="bi bi-book" style="font-size: 3em;"></i>
       </div>
 
       <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-chat-square-dots chat-icon"></i>
+      <i class="bi bi-chat-square-dots" style="font-size: 3em;"></i>
       </div>
 
       <div class="row">
     <div class="col-md-4 text-center"> 
-      <i class="bi bi-heart heart-icon"></i>
+      <i class="bi bi-heart" style="font-size: 3em;"></i>
       </div>
 </div> </div> </div>
 
