--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -86,6 +86,8 @@
 </div>
 <!-- Container end-->
 
+<br>
+<!-- Icons start-->
 <div class="container">
   <div class="row">
     <div class="col-md-4 text-center"> 
