--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -103,6 +103,11 @@
       </div>
 </div> </div> </div>
 
+<footer class="footer mt-auto py-3 bg-dark">
+       <div class="container">
+         <span class="text-muted">This is a bootstrap exercise</span>
+       </div>
+     </footer>
 
 </body>
 </html>
