--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -8,7 +8,7 @@
 
  <title>Skate! Newsletter</title>
  <meta name="description" content="Merrill College of Journalism, UMD">
- <meta name="author" content="Adam Marton">
+ <meta name="author" content="Cait Heiderman">  <!-- Changed to my name -->
 
  <!-- Bootstrap CSS and JavaScript -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
