--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -96,14 +96,20 @@
   <div class="row">
     <div class="col-md-4 text-center"> 
       <i class="bi bi-book"></i>
+      <h3> Headline</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
     <div class="col-md-4 text-center"> 
       <i class="bi bi-chat-square-dots"></i>
+      <h3> Headline</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 
     <div class="col-md-4 text-center"> 
       <i class="bi bi-heart"></i>
+      <h3> Headline</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 </div> </div> </div>
 
