--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -102,6 +102,7 @@
 
     <div class="col-md-4 text-center"> 
       <i class="bi bi-chat-square-dots"></i>
+      <div class="btn"></div>
       <h3> Headline</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
