--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -63,7 +63,7 @@
     the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, 
     responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p> 
 <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
-  <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Primary</button> 
+  <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button> 
 </div> </div> </div> </div>
 <!-- Hero image end-->
 
