--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -21,6 +21,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
+<style>
+  @media screen and (max-width: 500px){
+    h2 { /*div under 500px*/
+    padding-bottom: 50px;
+    background-color: teal
+}
+  } 
+
+
+</style>
+
 </head>
 
 <body>
