--- a/bootstrapexercise/bootstrap-template.html
+++ b/bootstrapexercise/bootstrap-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<link rel="stylesheet" type="text/css" href="bootstrap-template.css">
+<link rel="stylesheet" type="text/css" href="bootstrap-template.css"> <!-- Link to stylesheet-->
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,21 +15,22 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<!-- Bootstrap Icons -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+<!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
-<style>
-  @media screen and (max-width: 500px){
+<!-- Added query using guide from media query in-class exercise-->
+<style> 
+  @media screen and (max-width: 500px){ 
     h2 { /*div under 500px*/
     padding-bottom: 50px;
     background-color: teal
 }
   } 
-
-
 </style>
 
 </head>
@@ -124,12 +125,15 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       </div>
 </div> </div> </div>
+<!-- Icons end-->
 
+<!-- Footer start, copied from exercise instuctions-->
 <footer class="footer mt-auto py-3 bg-dark">
        <div class="container">
          <span class="text-muted">This is a bootstrap exercise</span>
        </div>
      </footer>
+<!-- Footer end-->
 
 </body>
 </html>
