--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css"
-        <title></title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <title>The Heiderman Gazette</title>
     </head>
 
     <body>
         <div id="content">
+         
+            <h1> <p id= "masthead"> The Heiderman Gazette </p> </h1>
+
+
         The Country Where 76% of Cars Sold Are Electric
 Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.
-
 
 By Lydia DePillis and Bhadra Sharma
 Reporting from Kathmandu, Nepal
