--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="content">
          
-            <h1> <p id= "masthead"> The Heiderman Gazette </p> </h1>
+            <h1> <p class= "masthead"> The Heiderman Gazette </p> </h1>
 
 
         The Country Where 76% of Cars Sold Are Electric
