working on masthead

--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -9,7 +9,7 @@
         <div id= "content">
          
             <h1> <p class= "masthead"> The Heiderman Gazette </p> </h1>
-
+            <img src="stargazette.xd" alt="Star Gazette">
 
         The Country Where 76% of Cars Sold Are Electric
 Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.
