--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <title>The Heiderman Gazette</title>
+        <title>The Star Gazette</title>
     </head>
 
     <body>
