--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -7,9 +7,8 @@
 
     <body>
         <div id= "content">
-         
-            <h1> <p class= "masthead"> The Heiderman Gazette </p> </h1>
-            <iframe width="1920" height="692" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
+            <h1> <p class= "masthead"> The Star Gazette </p> </h1>
+            <iframe width="100%" height="120px" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
 
         The Country Where 76% of Cars Sold Are Electric
 Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.
