--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -12,12 +12,12 @@
 <h1> The Country Where 76% of Cars Sold Are Electric</h1>
 <h2> By Lydia DePillis and Bhadra Sharma</h2>
 
-        The Country Where 76% of Cars Sold Are Electric
-Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.
+        <h1>The Country Where 76% of Cars Sold Are Electric </h1>
+<h2> Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</h2>
 
-By Lydia DePillis and Bhadra Sharma
+<h3>By Lydia DePillis and Bhadra Sharma
 Reporting from Kathmandu, Nepal
-Published July 28, 2025 Updated July 29, 2025
+Published July 28, 2025 Updated July 29, 2025 </h3>
 
 
 The narrow streets of Kathmandu — sized for pedestrians and rickshaws — are choked with engines. Buses, motorbikes, small trucks and taxis fill the sprawling valley with horns and exhaust. For its more than three million residents, just getting around is a dangerous, eye-stinging ordeal.
