--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -9,12 +9,13 @@
         <div id= "content">
 <iframe width="100%" height="366" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
 
-        <h1>The Country Where 76% of Cars Sold Are Electric </h1>
-<h2> Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</h2>
+        <div> <h1> <p class= "headline">The Country Where 76% of Cars Sold Are Electric </p> </h1> </div>
+        <div> <h2> <p class= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
 
-<h3>By Lydia DePillis and Bhadra Sharma
+
+     <div><h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma
 Reporting from Kathmandu, Nepal
-Published July 28, 2025 Updated July 29, 2025 </h3>
+Published July 28, 2025 Updated July 29, 2025 </p></h3></div>
 
 
 The narrow streets of Kathmandu — sized for pedestrians and rickshaws — are choked with engines. Buses, motorbikes, small trucks and taxis fill the sprawling valley with horns and exhaust. For its more than three million residents, just getting around is a dangerous, eye-stinging ordeal.
