--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -13,9 +13,9 @@
         <div> <h2> <p class= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
 
 
-     <div><h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma
-Reporting from Kathmandu, Nepal
-Published July 28, 2025 Updated July 29, 2025 </p></h3></div>
+     <div> <h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma <br>
+Reporting from Kathmandu, Nepal <br>
+Published July 28, 2025 Updated July 29, 2025 </p> </h3></div>
 
 
 The narrow streets of Kathmandu — sized for pedestrians and rickshaws — are choked with engines. Buses, motorbikes, small trucks and taxis fill the sprawling valley with horns and exhaust. For its more than three million residents, just getting around is a dangerous, eye-stinging ordeal.
