--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -6,7 +6,6 @@
     </head>
 
     <body>
-        <div id= "content">
 <iframe width="100%" height="366" src="https://xd.adobe.com/embed/1dc8a4f6-df6a-4135-89e2-2a289e0d0911-489b/" frameborder="0" allowfullscreen></iframe>
 
         <div> <h1> <p class= "headline">The Country Where 76% of Cars Sold Are Electric </p> </h1> </div>
@@ -14,6 +13,8 @@
 
 
      <div> <h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma <br>
+
+        <div><h4 id= "content">
 Reporting from Kathmandu, Nepal <br>
 Published July 28, 2025 Updated July 29, 2025 </p> </h3></div>
 
@@ -157,5 +158,6 @@ Even with more buses, taming the chaotic scrum of exhaust-spewing motorbikes wil
 
 
 Lydia DePillis reports on the American economy for The Times. She has been a journalist since 2009, and can be reached at lydia.depillis@nytimes.com.
-    </body>
+   </h4></div>
+</body>
 </html>
