--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -12,9 +12,7 @@
         <div> <h2> <p class= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
 
 
-     <div> <h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma <br>
-Reporting from Kathmandu, Nepal <br>
-Published July 28, 2025    Updated July 29, 2025 </p> </h3></div>
+     <div> <h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
 <div><h4 id= "content">
 
