--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -17,7 +17,7 @@
 <div><h4 id= "content">
 
     <img src="https://github.com/amarton/652-interactive-design-development/blob/master/midterm-review/image1.jpeg" alt="Busy Street in Kathmandu" style="width:600px;height:400px;">
-<div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. Credit: Rebecca Conway for The New York Times </p> </h5> </div>
+<div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">Credit: Rebecca Conway for The New York Times </p> </h5> </div>
 <br><br>
 
 But recently, a new kind of motor has started to ease the crush. Sleek electric vehicles glide by with a quiet hum. Gleaming showrooms do a brisk business in the latest models, and charging stations on the highways have turned into rest stops with cafes for drivers to pass the time. 
