--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -16,7 +16,7 @@
 
 <div><h4 id= "content">
 
-    <img src="image1.html" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
+    <img src="image1.jpeg" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">Credit: Rebecca Conway for The New York Times </p> </h5> </div>
 <br><br>
 
