--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -118,6 +118,9 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 “It’s a very positive direction they are going in, but it really comes down to the long-term policy,” Mr. Shrestha said. “Stability is always a question mark.” 
 <br><br>
 
+ <img src="image4.jpeg" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
+<div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
+
 <h3>E.V.s for Everybody</h3>
 <br><br>
 
