--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -20,6 +20,10 @@
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">Credit: Rebecca Conway for The New York Times </p> </h5> </div>
 <br><br>
 
+
+The narrow streets of Kathmandu — sized for pedestrians and rickshaws — are choked with engines. Buses, motorbikes, small trucks and taxis fill the sprawling valley with horns and exhaust. For its more than three million residents, just getting around is a dangerous, eye-stinging ordeal. 
+<br><br>
+
 But recently, a new kind of motor has started to ease the crush. Sleek electric vehicles glide by with a quiet hum. Gleaming showrooms do a brisk business in the latest models, and charging stations on the highways have turned into rest stops with cafes for drivers to pass the time. 
 <br><br>
 
