--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -81,7 +81,7 @@ Finally, the government set electricity costs for chargers at less than market r
 “At first, everybody was scared — how to establish and whether it would run or not,” said Kul Man Ghising, who managed the electricity authority until March. “But we tried and tried and tried.” Businesses have now installed about 1,200 chargers, according to the agency, and private residences are likely to have thousands more. 
 <br><br>
 
- <img src="image5.jpeg" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
+ <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-05-zkgb/28biz-nepal-ev-05-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The E.V. market share in Nepal is now behind only those a few countries, including Norway, Singapore and Ethiopia.</p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
 
 <div> <p class="section"></p> ‘A Win-Win Situation’</p> </div>
