--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -16,7 +16,7 @@
 
 <div><h4 id= "content">
 
-    <img src="image1.jpeg" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
+    <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-01-zkgb/28biz-nepal-ev-01-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">Credit: Rebecca Conway for The New York Times </p> </h5> </div>
 <br><br>
 
@@ -125,7 +125,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 “It’s a very positive direction they are going in, but it really comes down to the long-term policy,” Mr. Shrestha said. “Stability is always a question mark.” 
 <br><br>
 
- <img src="image4.jpeg" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
+ <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-04-zkgb/28biz-nepal-ev-04-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
 <div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
 <br>
 
