--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -131,7 +131,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 <div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
 <br>
 
-<div> <p class="section"></p> E.V.s for Everybody</p> </div>
+<div> <h2> <p class="section"></p> E.V.s for Everybody</p> </h2> </div>
 <br>
 
 For now, the electric shift in passenger vehicles is moving swiftly. But a vast majority of Nepal’s residents don’t have cars. Instead, they use cheaper motorbikes or mostly gasoline- and diesel-powered buses. 
