--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -57,7 +57,7 @@ The Asian Development Bank, a multinational development lender, has been a key f
 “Given the economic sense that this E.V. conversion represents for Nepal, I think I would see it as unlikely that we would have major policy change,” Mr. Cauchois said. “But that’s basically a wish more than a conviction.” 
 <br><br>
 
-<div> <p class="section"></p> From Indian Gasoline to Chinese Cars </p> </div>
+<div> <h2> <p class="section"></p> From Indian Gasoline to Chinese Cars </p> </h2> </div>
 <br>
 
 Many countries are trying to electrify their vehicle fleets, but the case for doing so is even more obvious in Nepal, with its clean energy embodied in the rivers that run down from the Himalayas. 
@@ -86,7 +86,7 @@ Finally, the government set electricity costs for chargers at less than market r
 
 <blockquote> “Many people were pushing for fossil fuels, but there was no one advocating for electric vehicles,” Ms. Shrestha said. </blockquote> 
 
-<div> <p class="section"></p> ‘A Win-Win Situation’</p> </div>
+<div> <h2> <p class="section"></p> ‘A Win-Win Situation’</p> </h2> </div>
 <br>
 
 At first, automotive dealers were skeptical. But Yamuna Shrestha saw the potential. 
