--- a/HeidermanLayout/index.html
+++ b/HeidermanLayout/index.html
@@ -12,12 +12,12 @@
         <div> <h2> <p class= "subhead">  Subsidies, hydroelectricity and a manufacturing powerhouse neighbor are moving the cars into Nepal faster than almost anywhere else.</p> </h2> </div>
 
 
-     <div> <h3> <p class= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
+     <div> <h3> <p id= "byline">By Lydia DePillis and Bhadra Sharma <br> Reporting from Kathmandu, Nepal <br>Published July 28, 2025    Updated July 29, 2025 </p> </h3> </div>
 
 <div><h4 id= "content">
 
     <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-01-zkgb/28biz-nepal-ev-01-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Busy Street in Kathmandu" style="width:600px;height:400px;"> </a>
-<div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">Credit: Rebecca Conway for The New York Times </p> </h5> </div>
+<div> <h5> <p class= "caption"> The narrow streets of Kathmandu are sized for pedestrians and rickshaws. </p> <p class= "credit">(The New York Times). </p> </h5> </div>
 <br><br>
 
 
@@ -82,7 +82,7 @@ Finally, the government set electricity costs for chargers at less than market r
 <br><br>
 
  <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-05-zkgb/28biz-nepal-ev-05-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
-<div> <h5> <p class= "caption"> The E.V. market share in Nepal is now behind only those a few countries, including Norway, Singapore and Ethiopia.</p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
+<div> <h5> <p class= "caption"> The E.V. market share in Nepal is now behind only those a few countries, including Norway, Singapore and Ethiopia.</p> <p class= "credit"> (The New York Times). </p> </h5> </div>
 
 <blockquote> “Many people were pushing for fossil fuels, but there was no one advocating for electric vehicles,” Ms. Shrestha said. </blockquote> 
 
@@ -128,7 +128,7 @@ Rajan Babu Shrestha holds the license to distribute cars in Nepal from the India
 <br><br>
 
  <img src="https://static01.nyt.com/images/2025/08/02/multimedia/28biz-nepal-ev-04-zkgb/28biz-nepal-ev-04-zkgb-superJumbo.jpg?quality=75&auto=webp" alt="Electric Vehicles" style="width:600px;height:400px;"> </a>
-<div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> Credit:Rebecca Conway for The New York Times </p> </h5> </div>
+<div> <h5> <p class= "caption"> A BYD showroom for E.V.s. The competition among Chinese E.V. brands in Nepal is withering. </p> <p class= "credit"> (The New York Times). </p> </h5> </div>
 <br>
 
 <div> <h2> <p class="section"></p> E.V.s for Everybody</p> </h2> </div>
